--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,10 @@
 05-Sistema de pagos/bin/Disney.abi
 05-Sistema de pagos/bin/Disney.bin
 05-Sistema de pagos/bin/Disney.json
+06-gestion medica covid/bin/CentroSalud.abi
+06-gestion medica covid/bin/CentroSalud.bin
+06-gestion medica covid/bin/CentroSalud.json
+06-gestion medica covid/bin/OMS_COVID.abi
+06-gestion medica covid/bin/OMS_COVID.bin
+06-gestion medica covid/bin/OMS_COVID.json
+06-gestion medica covid/bin/OMS-solc-output.json
